--- a/meteor/package.json
+++ b/meteor/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "crypto-js": "^3.1.8",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "string-format": "0.5.0"
   }
 }
