--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ meteor/npm-debug.log
 # Typing type definition files to ignore. Webstorm uses type definitions for autocomplete even without typescript
 typings/*
 
+# Documentation
+docs/
+
 .DS_Store
