--- a/meteor/package.json
+++ b/meteor/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "babel-runtime": "^6.18.0",
     "crypto-js": "^3.1.8",
     "docdash": "^0.4.0",
