--- a/meteor/package.json
+++ b/meteor/package.json
@@ -9,6 +9,7 @@
     "babel-runtime": "^6.18.0",
     "crypto-js": "^3.1.8",
     "docdash": "^0.4.0",
+    "gender-guess": "^1.0.4",
     "jsdoc": "^3.4.3",
     "meteor-node-stubs": "~0.2.0",
     "string-format": "0.5.0"
