--- a/meteor/package.json
+++ b/meteor/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "async-waterfall": "^0.1.5",
     "babel-runtime": "^6.18.0",
     "crypto-js": "^3.1.8",
     "docdash": "^0.4.0",
