--- a/meteor/package.json
+++ b/meteor/package.json
@@ -12,7 +12,11 @@
     "docdash": "^0.4.0",
     "gender-guess": "^1.0.4",
     "jsdoc": "^3.4.3",
+    "jsdoc-strip-async-await": "^0.1.0",
     "meteor-node-stubs": "~0.2.0",
     "string-format": "0.5.0"
+  },
+  "devDependencies": {
+    "jsdoc-strip-async-await": "^0.1.0"
   }
 }
