--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Meteor files to ignore now handled by .ignore file within .Meteor folder automatically
 
 # npm package files to ignore
-meteor/node_modules/
-meteor/npm-debug.log
+node_modules/
+npm-debug.log
 
 # Webstorm IDE files to ignore
 .idea/*
