Added CSV export

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ npm-debug.log
 # Typing type definition files to ignore. Webstorm uses type definitions for autocomplete even without typescript
 typings/*
 
+fakeCSV/*.csv
 .DS_Store
