--- a/meteor/package.json
+++ b/meteor/package.json
@@ -14,6 +14,9 @@
     "jsdoc": "^3.4.3",
     "jsdoc-strip-async-await": "^0.1.0",
     "meteor-node-stubs": "~0.2.0",
+    "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "react-dom": "^15.4.2",
     "string-format": "0.5.0"
   }
 }
