--- a/meteor/package.json
+++ b/meteor/package.json
@@ -17,6 +17,7 @@
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-mounter": "^1.2.0",
     "string-format": "0.5.0"
   }
 }
